--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,5 +59,5 @@
     <string name="take">Взять себе</string>
     <string name="done_task">Исполнено</string>
     <string name="note">Заметка</string>
-    <string name="doing">Выполнить</string>
+    <string name="doing">Приступить</string>
 </resources>
