добавил внутренний хост, исправил баг с созданием задания добавил вью фильтра

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,5 +71,12 @@
     <string name="exit">Выход</string>
     <string name="tasks">Заявки</string>
     <string name="search">Поиск</string>
+    <string name="filter">Фильтр</string>
+    <string name="one_day">1 день</string>
+    <string name="one_week">1 неделя</string>
+    <string name="one_month">1 месяц</string>
+    <string name="all_period">весь период</string>
+    <string name="cancel">Отмена</string>
+    <string name="ok">Принять</string>
 
 </resources>
