--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,6 +77,6 @@
     <string name="one_month">1 месяц</string>
     <string name="all_period">весь период</string>
     <string name="cancel">Отмена</string>
-    <string name="ok">Принять</string>
+    <string name="ok">ок</string>
 
 </resources>
