--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,7 +50,6 @@
     <string name="password">Пароль:</string>
     <string name="create">Создать</string>
     <string name="user_id">id юзера, можно только больше</string>
-    <string name="choose_date">Выбрать дату</string>
     <string name="inside_ip">Внутренняя сеть</string>
     <string name="user_name_task">Имя пользователя:</string>
     <string name="map">Карта</string>
@@ -78,5 +77,7 @@
     <string name="all_period">весь период</string>
     <string name="cancel">Отмена</string>
     <string name="ok">ок</string>
+    <string name="choose_date">Выбрать дату</string>
+    <string name="choose_user">Выбрать пользователя</string>
 
 </resources>
